# solstice-astrology-backend

./: .gitignore  Dockerfile  README.md  conftest.py  new_zodiac_data.json  pyproject.toml  requirements.txt  zodiac_data.json
.github/workflows/: main_solstice-social.yml
app/: NOTES.md  cypher_linter.cypher  main.py  personality.py
app/astrology/: api.py  data.py  db.py  schemas.py  utils.py
app/boops/: api.py  db.py  schemas.py
app/chat/: api.py  db.py  schemas.py
app/interactions/: api.py  schemas.py
app/notifications/: api.py  ws.py
app/personality/: api.py  schemas.py  utils.py
app/posts/: api.py  db.py  schemas.py
app/search/: db.py  schemas.py
app/shared/: apple_key_cache.py  auth.py  embeddings.py  neo4j.py  parsing.py  schemas.py  settings.py  storage.py
app/users/: api.py  db.py  schemas.py
tests/: test_main.py  test_script.py
tests/test_astrology/: test_astrology.py
tests/test_personality/: test_personality.py
tests/test_users/: test_db.py
typings/: swisseph.pyi
