[tool.poetry]
name = "solstice-astrology-backend"
version = "0.1.0"
description = "This repository contains the backend service for astrology-based features in Solstice, an 18+ Apple Exclusive social application. The primary purpose of this service is to calculate astrological compatibility between users and provide related features."
authors = ["JoshJarabek7 <jarabekjosh@icloud.com>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email-validator"], version = "^2.7.4"}
uvloop = "^0.19.0"
fastapi = "^0.111.0"
pydantic-extra-types = "^2.8.2"
timezonefinder = "^6.5.2"
pytz = "^2024.1"
pyswisseph = "^2.10.3.2"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
